--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.4",
+    "apexcharts": "^4.1.0",
+    "chart.js": "^4.4.7",
     "express": "^4.18.2",
+    "ng-apexcharts": "^1.15.0",
+    "ng2-charts": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
